force-app/main/default/objects/Proposta__c/Proposta__c.object-meta.xml
<CustomObject>
    <description>Propostas de Oportunidades. Feito para uso exclusivo em listas relacionadas, não em abas, a princípio.</description>
    <label>Proposta</label>
    <nameField>
        <label>Nome da Proposta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propostas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>