force-app/main/default/objects/Proposta__c/fields/Oportunidade_Numero__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Numero__c</fullName>
    <formula>IF(Oportunidade__c != null, Oportunidade__r.Numero_OP__c, 
    IF(Ordem_de_trabalho__c != null, Ordem_de_trabalho__r.WorkOrderNumber, &apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número da Opp/Ot</label>
    <type>Text</type>
</CustomField>