force-app/main/default/objects/Proposta__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL do Arquivo</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>