force-app/main/default/objects/Proposta__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <description>Valor da Oportunidade, quando gerada a proposta.</description>
    <inlineHelpText>Valor da Oportunidade, quando gerada a proposta.</inlineHelpText>
    <label>Valor Total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>