force-app/main/default/objects/Proposta__c/fields/Versao__c.field-meta.xml
<CustomField>
    <fullName>Versao__c</fullName>
    <description>Versão da Proposta, dentro da Oportunidade atual.</description>
    <label>Versão da Proposta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>